added some more comments

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -184,9 +184,15 @@
     "    - **12000** was chosen to not loose to many samples but also not loose too much diversity. Also no big differences were noticed between *de novo* and *fragment insertion tree*. At the end we used the *fragment insertion tree*.\n",
     "4. Also tested different `diversity alpha-rarefaction` --p-max-depth to double check the chosen rarefaction depth. It was done for --p-max-depth 10000 and 50000.\n",
     "5. Used `core-metrics-phylogenetic` plugin and inserted 12000 for --p-sampling-depth in order to get many different core-metrics artifacts.\n",
-    "6. Used `diversity alpha-group-significance` plugin to run some statistical tests (Kruskall-Wallis)\n",
-    "7. use `diversity alpha-correlation` to check for correlations (columns - richness of microbial community)\n",
-    "8. some fun with pandas: creating a 2D plot of our data"
+    "6. Used `diversity alpha-group-significance` plugin to run some statistical tests (Kruskall-Wallis) for all four metrics: Faith PD, observed features, Shannon entropy and Pielou evenness\n",
+    "7. use `diversity alpha-correlation` to check for correlations between numeric colums -- such as longitude and latitude -- against the four metrics\n",
+    "8. some fun with pandas: creating a 2D plot of our data for the report (as it's in 2D)\n",
+    "\n",
+    "### beta diversity\n",
+    "9. Analysis of core metrics qzv files\n",
+    "10) PERMANOVA test: \n",
+    "11) Adonis: to explain which covariants explain most variation in our data\n",
+    "12) Pandas fun: creating 2D plots for the report :)"
    ]
   },
   {
@@ -729,10 +735,6 @@
    "execution_count": 2,
    "id": "ff4c8fc7-189a-4fff-99e8-4495da24d1cb",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -769,7 +771,7 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-_b47gs2p')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-6f3k18bv')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: b666216f-7507-4a72-91a4-03c56417d2f4>"
@@ -811,10 +813,6 @@
    "execution_count": 3,
    "id": "2af036a2-2aa4-4b48-8b15-5a9d3ac9c4d9",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -851,7 +849,7 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-cuj6ddlm')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-r5inx1ik')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: c03165a6-65d2-4cf1-a5f6-9ca5412a08b5>"
@@ -893,10 +891,6 @@
    "execution_count": 4,
    "id": "447254d1-8c8a-43b4-91aa-2621f89105b6",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -933,7 +927,7 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-bkyh72b7')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-b1mj6rry')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 56dbf38a-d551-40da-929c-0010d99e1f5d>"
@@ -972,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b1ca5d76-5e4b-4923-9efe-29bdf3c03180",
    "metadata": {
     "tags": []
@@ -1011,13 +1005,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-lgsxdnzn')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-wnl8w0pt')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 6ca0b998-c87c-4204-9834-51db56c4aa9e>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,13 +1052,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "13e492c1-7838-4862-8033-d9567fc38b4e",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1101,13 +1091,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-jx_ebe44')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-9s1_kqag')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: eb2de2af-9b74-4497-8e1e-9993bfbd15e1>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b92476da-e7bd-4ebf-a3b0-201c826baa68",
    "metadata": {},
    "outputs": [
@@ -1177,13 +1167,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-jxuo99wd')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-bfcy765u')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 458be753-6461-4cb4-a6b0-f739fafc2e0d>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "232385ec-45b9-4b5b-9e2b-c0530b263365",
    "metadata": {},
    "outputs": [
@@ -1253,13 +1243,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-hkkinomg')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-poprwcn2')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: d169455d-993a-4dcb-b13c-42a5d718e6c4>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "c5143536-b6cd-46a0-8e6b-2e55e1117755",
    "metadata": {},
    "outputs": [
@@ -1329,13 +1319,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-w2i8vsew')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-s4_23tie')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 2f4c1716-6415-443b-adb0-8fad10486756>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,20 +1335,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f979b2c8-7326-4eb0-af90-60251b7dddf1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "44dd9f15-2161-4a15-9211-b09e7a5fbf5c",
+   "id": "ca9df7e9-036d-4900-a6bc-2b94750d81c3",
    "metadata": {},
    "source": [
-    "I feel like this correlation thing isn't necessary....\n",
-    "->> should try ANOVA q2-longitudinal? are assumptions correct tho?"
+    "No correlation was visible"
    ]
   },
   {
@@ -1585,7 +1566,8 @@
    "id": "e359de46-b0f3-4e1e-afc1-b36efd68cc7d",
    "metadata": {},
    "source": [
-    "Analyse beta diversity from core-metrics-phylogenetic action. Inspect unweighted_unifrac_emperor.qzv:"
+    "### 9) Analysis of core metrics qzv files\n",
+    "Analyse beta diversity from core-metrics-phylogenetic action. Unweigthed as well as weighted UniFrac, Jaccard and Bray-Curtis was visualized and inspected using the qzv files created under 5). "
    ]
   },
   {
@@ -2408,15 +2390,8 @@
    "id": "8efb094d-a0cf-4479-b57a-5de24632d295",
    "metadata": {},
    "source": [
-    "#### PANDAS fun"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20553aed-154f-4fa8-a4f3-9c86064635cd",
-   "metadata": {},
-   "source": [
-    "### 12000"
+    "#### PANDAS fun\n",
+    "creating 2 D plots for our report, having fun with different colours and metrics :)"
    ]
   },
   {
@@ -2693,9 +2668,6 @@
    "execution_count": 31,
    "id": "5b6a1ff6-0cea-45ec-a27a-fca1e0bf5f92",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
