--- a/taxonomy_full_length.ipynb
+++ b/taxonomy_full_length.ipynb
@@ -5,7 +5,7 @@
    "id": "45af823e-81c9-4a02-b3af-addb01793417",
    "metadata": {},
    "source": [
-    "THIS FILE COMPAIRES THE FULL LENGTH CLASSIFIER VS THE 515f/806r CLASSIFIER FROM GREENGENES. "
+    "### NOTE: THIS FILE COMPAIRES THE FULL LENGTH CLASSIFIER VS THE 515f/806r CLASSIFIER FROM GREENGENES. "
    ]
   },
   {
