Added moist-salt-faith table

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -1538,6 +1538,148 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f942491-afeb-400d-b05a-914ae980e6aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faith = q2.Artifact.load(os.path.join(data_dir, 'core-metrics-results_insertion_12000/faith_pd_vector.qza')).view(pd.Series)\n",
+    "salt = pd.read_csv(os.path.join(data_dir, 'food-metadata.tsv'), sep='\\t', index_col=0)['salt']\n",
+    "moisture = pd.read_csv(os.path.join(data_dir, 'food-metadata.tsv'), sep='\\t', index_col=0)['moisture']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "91c0b6a9-65bb-430b-93e9-967b856c2b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>faith_pd</th>\n",
+       "      <th>salt</th>\n",
+       "      <th>moisture</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB280</th>\n",
+       "      <td>9.111393</td>\n",
+       "      <td>0.045997737</td>\n",
+       "      <td>34.80519481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB281</th>\n",
+       "      <td>10.492586</td>\n",
+       "      <td>0.068926154</td>\n",
+       "      <td>31.33333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB282</th>\n",
+       "      <td>9.983138</td>\n",
+       "      <td>0.030862483</td>\n",
+       "      <td>34.90566038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB290</th>\n",
+       "      <td>4.539658</td>\n",
+       "      <td>0.220927133</td>\n",
+       "      <td>18.88111888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB292</th>\n",
+       "      <td>3.130709</td>\n",
+       "      <td>0.0850591</td>\n",
+       "      <td>22.89156627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB980</th>\n",
+       "      <td>8.061571</td>\n",
+       "      <td>0.134996023</td>\n",
+       "      <td>28.20512821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB981</th>\n",
+       "      <td>6.614198</td>\n",
+       "      <td>0.102762839</td>\n",
+       "      <td>25.76153177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB984</th>\n",
+       "      <td>10.555242</td>\n",
+       "      <td>0.285081837</td>\n",
+       "      <td>28.84012539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB985</th>\n",
+       "      <td>11.277596</td>\n",
+       "      <td>0.109716632</td>\n",
+       "      <td>24.9661705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB986</th>\n",
+       "      <td>10.604778</td>\n",
+       "      <td>0.083519442</td>\n",
+       "      <td>40.78212291</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>337 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               faith_pd         salt     moisture\n",
+       "11488.CSB280   9.111393  0.045997737  34.80519481\n",
+       "11488.CSB281  10.492586  0.068926154  31.33333333\n",
+       "11488.CSB282   9.983138  0.030862483  34.90566038\n",
+       "11488.CSB290   4.539658  0.220927133  18.88111888\n",
+       "11488.CSB292   3.130709    0.0850591  22.89156627\n",
+       "...                 ...          ...          ...\n",
+       "11488.CSB980   8.061571  0.134996023  28.20512821\n",
+       "11488.CSB981   6.614198  0.102762839  25.76153177\n",
+       "11488.CSB984  10.555242  0.285081837  28.84012539\n",
+       "11488.CSB985  11.277596  0.109716632   24.9661705\n",
+       "11488.CSB986  10.604778  0.083519442  40.78212291\n",
+       "\n",
+       "[337 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([faith, salt, moisture], join = 'inner', axis = 1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "351abf1e-ebce-4377-b643-9fd3b734efe6",
    "metadata": {},
