--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -1571,7 +1571,14 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "9c40a011-dd20-492d-90ba-5bb429be50a9",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
