added note for better understanding

--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "In this notebook we try to analyze the differential abundance in our samples. Meaning we try to test whether individual ASVs/taxa differ in abundance between samples groups. :)\n",
+    "**Note:** In this notebook we first \"tested\" ancom on our files and the applied it to various sample groups in order to get a overview which further analysis could be of interest for our research question.\n",
     "\n",
     "This can be done via ANCOM as appropriate statistical test, yay!"
    ]
